--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             <a href="#contact" class="btn">Contactez moi</a>
         </div>
         <div class="home-img">
-            <a href="https://ibb.co/4t3N9zL"><img src="https://i.ibb.co/xLd5PWb/IMG-3565-photo.jpg" alt="IMG-3565-photo" height="600" width="100"></a>
-        </div>
+             <img src="https://i.ibb.co/JQdj3NR/IMG-3565-photo.jpg" alt="IMG-3565-photo"></a>
  
     </section>
     <!-- About -->
