--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
         <div class="portfolio-content">
             <div class="portfolio-img">
-                <a href="https://ibb.co/X5JSFNT"><img src="https://i.ibb.co/VCB2Mr8/Affiche-Altaleghje.jpg" alt="Affiche-Altaleghje" ></a><br /><a target='_blank' href='https://fr.imgbb.com/'></a><br />
+            <img src="https://i.ibb.co/VCB2Mr8/Affiche-Altaleghje.jpg" alt="Affiche-Altaleghje"></a>
             </div>
             <div class="portfolio-img">
                 <a href="https://ibb.co/sg8SHCJ"><img src="https://i.ibb.co/zmqcJFH/site-web-mediacultura-copie-2.png" alt="site-web-mediacultura-copie-2" ></a>
