--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <img src="https://i.ibb.co/VCB2Mr8/Affiche-Altaleghje.jpg" alt="Affiche-Altaleghje"></a>
             </div>
             <div class="portfolio-img">
-                <a href="https://ibb.co/sg8SHCJ"><img src="https://i.ibb.co/zmqcJFH/site-web-mediacultura-copie-2.png" alt="site-web-mediacultura-copie-2" ></a>
+                 <img src="https://i.ibb.co/q1shhG2/site-web-mediacultura-copie-2.jpg" alt="site-web-mediacultura"></a>
             </div>
              <div class="portfolio-img"
                href="https://imgbb.com/"><img src="https://i.ibb.co/8Xc6Nwf/De-Sousa-Samuel-MMI1-S1.jpg" alt="De-Sousa-Samuel-MMI1-S1" ></a>
