--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#contact" class="btn">Contactez moi</a>
         </div>
         <div class="home-img">
-             <img src="https://i.ibb.co/JQdj3NR/IMG-3565-photo.jpg" alt="IMG-3565-photo"></a>
+             <img src="Affiche-Altaleghje.jpg" alt="IMG-3565-photo"></a>
  
     </section>
     
